fix: Align images correctly and improve wide screen display
- Fixed alignment of images in the staples section of index.html.
- Ensured that the main content stays within a maximum width while the background color spans the entire width of the browser window.
- Added CSS adjustments to handle wide screen display issues for better user experience.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
   font-family: Lato, sans-serif;
   margin: 0;
   padding: 0;
+  background-color: rgb(255, 249, 217); /* Cream */
 }
 
 /* Styling for mobile first */
@@ -98,7 +99,6 @@ nav ul li a.active {
 main {
   padding: 20px;
   padding-top: 100px;
-  background-color: rgb(255, 249, 217); /* Cream */
   min-height: calc(100vh - 100px);
   overflow: auto;
 }
@@ -123,8 +123,9 @@ main {
   padding-bottom: 3px;
 }
 
-#staples_image_left, #staples_image_right {
-display: none;
+#staples_image_left,
+#staples_image_right {
+  display: none;
 }
 
 #recipe img {
@@ -316,33 +317,39 @@ footer {
     padding: 10px 15px; /* Adjust padding for nav links */
   }
 
+  #main_body {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+
   .staples_container {
     display: flex;
     align-items: flex-start;
     /* margin: 20px; */
   }
 
-  #staples_image_right, #staples_image_left {
+  #staples_image_right,
+  #staples_image_left {
     display: block;
-    width:300px;
+    width: 300px;
     height: auto;
     border-radius: 50%;
   }
 
   #staples_image_right {
-    order: 2;
-    margin-left:20px;
+    order: 1;
+    margin-left: 20px;
   }
 
   #staples_image_left {
-    order: 1;
+    order: -1;
     margin-right: 20px;
   }
 
-
-
   .staples_text {
     flex: 1;
+    padding-bottom: 15px;
   }
 
   #recipe {
@@ -373,7 +380,8 @@ footer {
     #recipe img {
       display: none;
     }
-    #staples_image_right, #staples_image_left {
+    #staples_image_right,
+    #staples_image_left {
       display: none;
     }
   }
